--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -10,7 +10,7 @@
 
   <div class="controls">
     <label for="spacing">Spacing:</label>
-    <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
+    <input id="spacing" type="range" name="spacing" min="0" max="200" value="10" data-sizing="px">
 
     <label for="blur">Blur:</label>
     <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
@@ -19,9 +19,15 @@
     <input id="base" type="color" name="base" value="#ffc600">
   </div>
 
-  <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
+  <img src="https://images.unsplash.com/photo-1548943544-56e76b7c16d0?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
 
   <style>
+
+    :root {
+      --blur: 0px;
+      --spacing: .25rem;
+      --base: #193549;
+    }
 
     /*
       misc styles, nothing to do with CSS variables
@@ -29,11 +35,12 @@
 
     body {
       text-align: center;
-      background: #193549;
+      background: var(--base);
       color: white;
       font-family: 'helvetica neue', sans-serif;
       font-weight: 100;
       font-size: 50px;
+      word-spacing: var(--spacing);
     }
 
     .controls {
@@ -43,9 +50,49 @@
     input {
       width: 100px;
     }
+
+    img {
+      filter: blur(var(--blur));
+    }
   </style>
 
   <script>
+    const allInputIds = document.querySelectorAll('input');
+
+    function getValue(id) {
+      const valueNow = document.getElementById(`${id}`).value;
+      return valueNow;
+    };
+
+    /* 
+    allInputIds.forEach(el => {
+      el.addEventListener('change', (ev) => {
+        const etid = event.target.id;
+        let CSSvar = scaletype = undefined;
+        switch(etid) {
+          case 'spacing': scaletype = 'rem'; break;
+          case 'blur': scaletype = 'px'; break;
+          case 'base': scaletype = ''; break;
+        }
+        if (etid.includes('spacing')) CSSvar = 'w' + etid; // nice to know if CSSVariable have different naming (in this line I had in :root: --wspacing)
+        else if (/blur/.test(etid)) CSSvar = etid; // same (obvious in this line)
+        else CSSvar = 'bgClr'; // same (in :root: --bgClr)
+        document.documentElement.style.setProperty(`--${CSSvar}`, `${getValue(etid)}${scaletype}`);
+      });
+    });
+    */
+
+    // after realizing there is a data-sizing, which was while comparing the code in -FINISHED
+    allInputIds.forEach(el => {
+      el.addEventListener('change', (ev) => {
+        const etid = ev.target.id;
+        console.log(etid);
+        const scaletype = ev.target.dataset.sizing || '';
+        console.log(scaletype);
+        document.documentElement.style.setProperty(`--${etid}`, `${getValue(etid)}${scaletype}`);
+      });
+    });
+
   </script>
 
 </body>
