--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -9,7 +9,7 @@
 <body>
   <style>
     html {
-      box-sizing: border-box;
+      box-sizing: content-box;
       background: #ffc600;
       font-family: 'helvetica neue';
       font-size: 20px;
@@ -23,7 +23,7 @@
     *, *:before, *:after {
       box-sizing: inherit;
     }
-
+    
     .panels {
       min-height: 100vh;
       overflow: hidden;
@@ -42,15 +42,55 @@
         flex 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
         background 0.2s;
       font-size: 20px;
+      height: 20vh;
       background-size: cover;
       background-position: center;
+      display: grid;
+      grid-auto-flow: row;
     }
 
-    .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
-    .panel2 { background-image:url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500); }
+    .panel:hover:not(.active) {
+      cursor: pointer;
+      scale: 1.1;
+      transition: scale 1s ease;
+      grid-auto-flow: column;
+    }
+
+    .panel1:hover {
+      transform-origin: top;
+    }
+
+    .panel5:hover {
+      transform-origin: bottom;
+    }
+
+    .panel.active {
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      cursor: pointer;
+      width: 100vw;
+      height: 100vh;
+    }
+
+    .panel.active p {
+      margin: 10%;
+    }
+
+    .panel.active p:nth-child(2n+1) {
+      transform: translateY(50%);
+    }
+
+    .panel.hidden {
+      visibility: hidden;
+      height: 0;
+    }
+
+    .panel1 { background-image:url(https://images.unsplash.com/photo-1732482124606-697008dab09c?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D); }
+    .panel2 { background-image:url(https://images.unsplash.com/photo-1744198275588-06648407b39a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D); }
     .panel3 { background-image:url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d); }
-    .panel4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
-    .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
+    .panel4 { background-image:url(https://images.unsplash.com/photo-1742943892627-f7e4ddf91224?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D); }
+    .panel5 { background-image:url(https://images.unsplash.com/photo-1741567348603-0bef4612bea2?q=80&w=2138&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D); }
 
     /* Flex Children */
     .panel > * {
@@ -68,10 +108,6 @@
 
     .panel p:nth-child(2) {
       font-size: 4em;
-    }
-
-    .panel.open {
-      font-size: 40px;
     }
 
   </style>
@@ -106,7 +142,20 @@
   </div>
 
   <script>
-
+document.addEventListener('click', (e) => {
+  const allPanels = document.querySelectorAll('.panel');
+  allPanels.forEach(panel => {
+    let targetedElement = e.target;
+    if (panel === targetedElement.closest('.panel')) { // .closest() from AI
+      panel.classList.remove('hidden');
+      panel.classList.toggle('active');
+    }
+    else {
+      panel.classList.remove('active');
+      panel.classList.toggle('hidden');
+    }
+  });
+});
   </script>
 
 
